--- a/access_server/templates/add_edit.html
+++ b/access_server/templates/add_edit.html
@@ -8,6 +8,10 @@
         {{ form.as_p }}
         <button type='submit'>Add</button>
     </form>
+    {% if error %}
+        There was an error. Please see the output below.
+        {{ error }}
+    {% endif %}
     {% if help %}
         <hr>
         <pre>{{ help }}</pre>
