--- a/access_server/templates/index.html
+++ b/access_server/templates/index.html
@@ -27,24 +27,23 @@
         </form>
     </div>
     {% if display %}
-        <hr>
+        <hr><hr>
         <div id='run-display'>
-            <h4>{{ display.outcome }}</h4>
-            <h5>Tasks Run:</h5>
-            <ul>
-                {% for t in display.tasks %}
-                    <li>{{ t }}</li>
+            {% for hostname, displays in outputs %}
+                <h4>{{ hostname }}</h4>
+                {% for d in displays %}
+                    <h5>Action: {{ d.action }} - {{ d.status }}</h5>
+                    <h5>Tasks Run:</h5>
+                    <ul>
+                        {% for t in d.tasks %}
+                            <li>{{ t }}</li>
+                        {% endfor %}
+                    </ul>
+                    <button id='raw-btn' type='button' onclick='toggleRaw()'>Show Raw Output</button>
+                    <pre id='raw-display' style='display:none'>{{ d.raw }}</pre>
                 {% endfor %}
-            </ul>
-            <button id='raw-btn' type='button' onclick='toggleRaw()'>Show Raw Output</button>
-            <pre id='raw-display' style='display:none'>{{ display.raw }}</pre>
-        </div>
-    {% endif %}
-    {% if error %}
-        <hr>
-        <div id='run-error'>
-            <h4>Error</h4>
-            <p>{{ error }}</p>
+                <hr>
+            {% endfor %}
         </div>
     {% endif %}
 {% endblock %}
