--- a/access_server/templates/index.html
+++ b/access_server/templates/index.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block head %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         function toggleRaw() {
             var x = document.getElementById('raw-display');
@@ -15,6 +16,96 @@
                 y.innerText = 'Show Raw Output';
             }
         }
+
+        $('#run-form').on('submit', function(e){
+            var display_div = document.getElementById('run-display');
+            display_div.innerHTML = '';
+
+            var running_div = document.getElementById('running-display');
+            running_div.innerHTML = "<h3 id='running'>Running...</h3><hr><hr>";
+
+            var actions = [];
+            var action_names = [];
+            var devices = [];
+            var device_names = [];
+
+            var checkboxes = document.getElementsByName('actions');
+            for (var i = 0; i < checkboxes.length; i++) {
+                if (checkboxes[i].checked) {
+                    actions.push(checkboxes[i].value);
+                    action_names.push(checkboxes[i].nextSibling.textContent.replace('\n ', ''));
+                }
+            }
+
+            var checkboxes = document.getElementsByName('firewall_devices');
+            for (var i = 0; i < checkboxes.length; i++) {
+                if (checkboxes[i].checked) {
+                    devices.push(checkboxes[i].value);
+                    device_names.push(checkboxes[i].nextSibling.textContent.replace('\n ', ''));
+                }
+            }
+
+            for (var d = 0; d < devices.length; d++) {
+                var node = document.createElement('h4');
+                var text = document.createTextNode(device_names[d]);
+                node.appendChild(text);
+                display_div.appendChild(node);
+                for (var a = 0; a < actions.length; a++) {
+                    e.preventDefault();
+                    $.ajax({
+                        type : 'POST',
+                        url: "{% url 'run_action' D A %}".replace('D', devices[d]).replace('A', devices[a]),
+                        data: {
+                            csrfmiddlewaretoken: '{{ csrf_token }}',
+                            dataType: 'json',
+                        },
+                        success: function(data) {
+                            var node = document.createElement('h5');
+                            node.textContent = 'Action: ' + action_names[a] + ' - ' + data.outcome;
+                            display_div.appendChild(node);
+
+                            var node = document.createElement('h5');
+                            node.textContent = 'Tasks Run:';
+                            display_div.appendChild(node);
+
+                            var node = document.createElement('ol');
+                            for (var i = 0; i < data.tasks.length; i++) {
+                                var child_node = document.createElement('li');
+                                child_node.textContent = data.tasks[i];
+                                node.appendChild(child_node);
+                            }
+
+                            var node = document.createElement('button');
+                            node.id = 'raw-btn';
+                            node.type = 'button';
+                            node.onclick = 'toggleRaw()';
+                            node.textContent = 'Show Raw';
+                            display_div.appendChild(node);
+
+                            var node = document.createElement('pre');
+                            node.id = 'raw-display';
+                            node.style = 'display:none';
+                            node.textContent = data.raw
+
+                            var node = document.createElement('br');
+                            display_div.appendChild(node);
+                        },
+                        failure: function() {
+                            var node = document.createElement('h5');
+                            var text = document.createTextNode('Action: ' + action_names[a] + ' - Operational Failure');
+                            node.appendChild(text);
+                            display_div.appendChild(node);
+                            var node = document.createElement('br');
+                            display_div.appendChild(node);
+                        }
+                    });
+                }
+                var node = document.createElement('hr');
+                display_div.appendChild(node);
+            }
+
+            running_div.innerHTML = '';
+        });
     </script>
     <style>
         ul {
@@ -24,31 +115,14 @@
 {% endblock %}
 
 {% block main %}
-    <div id='run-form'>
-        <form method='post'>
+    <div>
+        <form id='run-form' method='post'>
             {% csrf_token %}
             {{ form.as_p }}
             <button type='submit'>Run</button>
         </form>
     </div>
-    {% if display %}
-        <hr><hr>
-        <div id='run-display'>
-            {% for hostname, displays in display.items %}
-                <h4>{{ hostname }}</h4>
-                {% for d in displays %}
-                    <h5>Action: {{ d.action }} - {{ d.outcome }}</h5>
-                    <h5>Tasks Run:</h5>
-                    <ol>
-                        {% for t in d.tasks %}
-                            <li>{{ t }}</li>
-                        {% endfor %}
-                    </ol>
-                    <button id='raw-btn' type='button' onclick='toggleRaw()'>Show Raw Output</button>
-                    <pre id='raw-display' style='display:none'>{{ d.raw }}</pre>
-                {% endfor %}
-                <hr>
-            {% endfor %}
-        </div>
-    {% endif %}
+    <hr><hr>
+    <div id='running-display'></div>
+    <div id='run-display'></div>
 {% endblock %}
