--- a/access_server/templates/index.html
+++ b/access_server/templates/index.html
@@ -51,8 +51,7 @@
                 node.appendChild(text);
                 display_div.appendChild(node);
                 for (var a = 0; a < actions.length; a++) {
-                    url = "{% url 'run_action' D A %}".replace('D', devices[d]).replace('A', devices[a]);
-                    console.log(url)
+                    url = "{% url 'run_action' " + devices[d] + ' ' + devices[a] + ' %}';
                     e.preventDefault();
                     $.ajax({
                         type : 'POST',
