--- a/access_server/templates/index.html
+++ b/access_server/templates/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block head %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script>
         function toggleRaw() {
             var x = document.getElementById('raw-display');
