--- a/access_server/templates/index.html
+++ b/access_server/templates/index.html
@@ -47,7 +47,7 @@
             for (var d = 0; d < devices.length; d++) {
                 var new_display_div = document.createElement('div');
                 new_display_div.id = device_names[d];
-                outer_div.appendChild(display_div);
+                outer_div.appendChild(new_display_div);
 
                 var node = document.createElement('h4');
                 var text = document.createTextNode(device_names[d]);
