--- a/access_server/templates/index.html
+++ b/access_server/templates/index.html
@@ -112,7 +112,7 @@
                     });
                 }
                 var node = document.createElement('hr');
-                display_div.appendChild(node);
+                new_display_div.appendChild(node);
             }
         }
     </script>
