--- a/access_server/templates/index.html
+++ b/access_server/templates/index.html
@@ -85,17 +85,20 @@
                             var node = document.createElement('button');
                             node.id = 'raw-btn';
                             node.type = 'button';
-                            node.onclick = 'toggleRaw()';
+                            node.setAttribute('onclick', 'toggleRaw()');
                             node.textContent = 'Show Raw';
                             display_div.appendChild(node);
 
                             var node = document.createElement('pre');
                             node.id = 'raw-display';
                             node.style = 'display:none';
-                            node.onclick = 'toggleRaw()';
                             node.textContent = data.raw;
                             display_div.appendChild(node);
 
+                            var node = document.createElement('br');
+                            display_div.appendChild(node);
+                            var node = document.createElement('br');
+                            display_div.appendChild(node);
                             var node = document.createElement('br');
                             display_div.appendChild(node);
 
@@ -111,8 +114,6 @@
                         }
                     });
                 }
-                var node = document.createElement('hr');
-                new_display_div.appendChild(node);
             }
         }
     </script>
