fix ansible ssh

--- a/access_server/access_server/templates/base.html
+++ b/access_server/access_server/templates/base.html
@@ -31,7 +31,7 @@
                     <a href="{% url 'manage_task' %}" class='btn btn-dark' role='button'>Schedule Action</a>
                     <br><br>
                     <a href="{% url 'manage_action' %}" class="btn btn-dark" role="button">Manage Actions</a>
-                    <a href="{% url 'manage_device' %}" class="btn btn-dark" role="button">Manage Firewall Device</a>
+                    <a href="{% url 'manage_device' %}" class="btn btn-dark" role="button">Manage Firewall Devices</a>
                 </div>
                 <hr>
                 {% block main %}{% endblock %}
