--- a/access_server/access_server/templates/base.html
+++ b/access_server/access_server/templates/base.html
@@ -14,7 +14,7 @@
             crossorigin="anonymous">
         </script>
         <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
-        <title>Firewall Lab</title>
+        <title>Hammertime</title>
         <link rel='icon' href="{% static 'hammer.png' %}" type='image/png'>
 
         <link rel='stylesheet' href="{% static 'base.css' %}">
