--- a/access_server/access_server/templates/index.html
+++ b/access_server/access_server/templates/index.html
@@ -4,9 +4,10 @@
 
 {% block head %}
     <script>
-        function toggleRaw() {
-            var x = document.getElementById('raw-display');
-            var y = document.getElementById('raw-btn');
+        function toggleRaw(id) {
+            var i = id.split('-').pop();
+            var x = document.getElementById('raw-display-' + i);
+            var y = document.getElementById('raw-btn-' + i);
             if (x.style.display === 'none') {
                 x.style.display = 'block';
                 y.innerText = 'Hide Raw Output';
@@ -68,6 +69,7 @@
                         },
                         success: function(data) {
                             var display_div = document.getElementById(data.hostname);
+                            var name = data.hostname.split('-').pop();
 
                             var node = document.createElement('h5');
                             node.textContent = 'Action: ' + data.action + ' - ' + data.outcome;
@@ -86,14 +88,14 @@
                             display_div.appendChild(node);
 
                             var node = document.createElement('button');
-                            node.id = 'raw-btn';
+                            node.id = 'raw-btn-' + name + data.action;
                             node.type = 'button';
-                            node.setAttribute('onclick', 'toggleRaw()');
-                            node.textContent = 'Show Raw';
+                            node.setAttribute('onclick', 'toggleRaw(this.id)');
+                            node.textContent = 'Show Raw Output';
                             display_div.appendChild(node);
 
                             var node = document.createElement('pre');
-                            node.id = 'raw-display';
+                            node.id = 'raw-display-' + name + data.action;
                             node.style = 'display:none';
                             node.textContent = data.raw;
                             display_div.appendChild(node);
