add status checks

--- a/access_server/access_server/templates/base.html
+++ b/access_server/access_server/templates/base.html
@@ -27,6 +27,8 @@
             <div class='main'>
                 <div class='placeholder'></div>
                 <div class='centered'>
+                    <a href="{% url 'status' %}" class="btn btn-dark" role="button">Status Check</a>
+                    <br><br>
                     <a href="{% url 'index' %}" class="btn btn-dark" role="button">Run Action Now</a>
                     <a href="{% url 'manage_task' %}" class='btn btn-dark' role='button'>Schedule Action</a>
                     <br><br>
